Fixed Responsive On Small Devices

--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@
     --theme-color: var(--purple);
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(var(--theme-color));
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(var(--theme-color), 0.75);
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -40,6 +62,14 @@ a {
     transition: 0.3s;
 }
 
+h1 {
+    font-size: 35px;
+}
+
+.main-h1 {
+    font-size: 65px;
+}
+
 .hidden {
     opacity: 0;
     filter: blur(5px);
@@ -63,16 +93,6 @@ a {
 
 .staff.hidden.delay-600 {
     transition: opacity 3s, filter 3s, transform 3s, height 0.75s;
-}
-
-@media(prefers-reduced-motion) {
-    .hidden {
-        transition: none;
-    }
-
-    html {
-        scroll-behavior: unset;
-    }
 }
 
 .feature {
@@ -172,7 +192,7 @@ div.hide {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 1.5vw;
     margin: 4px 2px;
     cursor: pointer;
@@ -186,7 +206,7 @@ div.hide {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 1.5vw;
     margin: 4px 2px;
     cursor: pointer;
@@ -198,20 +218,8 @@ div.hide {
     display: flex;
 }
 
-@media screen and (max-width: 800px) {
-    .staffs {
-        display: block;
-    }
-
-    .staff {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 615px) {
-    .feature:hover {
-        height: 330px;
-    }
+.stats {
+    display: flex;
 }
 
 .theme-picker {
@@ -322,7 +330,7 @@ label {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #111;
@@ -354,16 +362,6 @@ label {
     color: rgb(var(--theme-color));
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-
-    .sidenav a {
-        font-size: 18px;
-    }
-}
-
 #main {
     transition: margin-left .5s;
     padding: 16px;
@@ -376,6 +374,7 @@ div.openbtn {
     color: rgb(var(--theme-color));
     padding: 10px;
     transition: 0.3s;
+    z-index: 1;
 }
 
 div.openbtn:hover {
@@ -384,6 +383,14 @@ div.openbtn:hover {
 
 a:hover {
     color: #f1f1f1;
+}
+
+.navbar {
+    background: #111;
+    height: 80px;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
 }
 
 .stat {
@@ -405,4 +412,83 @@ a:hover {
 
 .stat.delay-400 {
     transition: opacity 2.5s, filter 2.5s, transform 2.5s, height 0.75s;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 615px) {
+    .feature:hover {
+        height: 330px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .staffs {
+        display: block;
+    }
+
+    .staff {
+        width: 50%;
+    }
+
+    .main-buttons {
+        display: block;
+    }
+
+    .stats {
+        display: block;
+    }
+
+    .stat {
+        width: 50%;
+        margin-top: 20px;
+    }
+
+    .button {
+        font-size: 25px;
+    }
+
+    .button-primary {
+        font-size: 25px;
+    }
+    
+    .link-primary {
+        font-size: 20px;
+    }
+
+    .main-h1 {
+        font-size: 40px;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    h1 {
+        font-size: 25px;
+    }
+
+    .link-primary {
+        font-size: 17px;
+    }
+}
+
+@media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+
+    html {
+        scroll-behavior: unset;
+    }
 }
